--- a/style.css
+++ b/style.css
@@ -90,3 +90,33 @@ body {
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+/* Media Queries */
+@media (max-width: 375px) {
+  .container {
+    margin: 0 1rem;
+  }
+  .heading {
+    margin: 7rem 1rem 3rem;
+  }
+  .h-bold,
+  .h-light {
+    font-size: 1.25rem;
+  }
+  .heading p {
+    padding: 0;
+    margin-top: 1rem;
+  }
+  .grid-container {
+    grid-template-columns: 1fr;
+  }
+  .card {
+    margin-top: 0;
+  }
+  .card-orange {
+    margin-top: 1rem;
+  }
+  .attribution {
+    padding: 3rem 0;
+  }
+}
